feat: Redesign homepage hero section, update logo and wordmark components, and add hero image asset.

--- a/apps/web/src/components/icons/Logo.astro
+++ b/apps/web/src/components/icons/Logo.astro
@@ -6,15 +6,14 @@ const { class: classNames, ...attrs } = Astro.props;
 ---
 
 <svg
+  fill="none"
   xmlns="http://www.w3.org/2000/svg"
-  viewBox="16.144 15.764 32 32.207"
+  viewBox="0 0 32 32"
   width="32"
   height="32"
   class={classNames}
   {...attrs}
+  ><path
+    d="M16.027 0C7.175 0 0 7.178 0 16.03s7.177 16.03 16.027 16.03c8.852 0 16.027-7.178 16.027-16.03S24.879 0 16.027 0m-.193 7.11 1.939 3.878c-2.198 4.435-4.394 8.881-6.593 13.315H7.69zm3.62 7.109c1.641 3.361 3.27 6.722 4.91 10.082h-3.747c-.427-.995-2.93-6.486-2.93-6.486z"
+    fill="#584dff"></path></svg
 >
-  <path
-    d="M32.144 15.764c-8.836 0 -16 7.211 -16 16.104s7.165 16.104 16 16.104c8.837 0 16 -7.211 16 -16.104s-7.163 -16.104 -16 -16.104m-0.193 7.143 1.936 3.896c-2.195 4.455 -4.387 8.922 -6.581 13.377h-3.484c2.709 -5.753 5.42 -11.519 8.13 -17.273m3.613 7.142c1.638 3.376 3.264 6.753 4.902 10.129h-3.741c-0.427 -1 -2.925 -6.516 -2.925 -6.516 1.123 -2.338 0.641 -1.276 1.763 -3.613"
-    style="stroke-width:1"
-  ></path>
-</svg>
