--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -88,6 +88,10 @@
   }
 }
 
+@theme {
+  --font-sans: "Poppins", "sans-serif";
+}
+
 @utility prose {
   & li p {
     margin: 0;
@@ -143,4 +147,13 @@
     opacity, box-shadow, transform;
   transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   transition-duration: 300ms;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-sans);
 }
