--- a/apps/web/src/components/ui/AccordionItem.astro
+++ b/apps/web/src/components/ui/AccordionItem.astro
@@ -30,12 +30,11 @@ const { open, title, name, class: className } = Astro.props;
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
-        d="M12 4.5v15m7.5-7.5h-15"
-      ></path>
+        d="M12 4.5v15m7.5-7.5h-15"></path>
     </svg>
   </summary>
   <div class="pb-5">
-    <slot/>
+    <slot />
   </div>
 </details>
 
@@ -70,7 +69,7 @@ const { open, title, name, class: className } = Astro.props;
 
   document.addEventListener("astro:page-load", () => {
     const accordions = document.querySelectorAll<HTMLDetailsElement>(
-      "[data-accordion-item]"
+      "[data-accordion-item]",
     );
     setAccordionHeight(accordions);
 
